# HADES

./: .coderabbit.yaml  .coveragerc  .env.template  .gitignore  .hades.pid  .hades_update_summary.md  2506.20821  AGENTS.md  ARCHITECTURAL_MANIFESTO.md  CHUNKING_TYPE_MIGRATION_SUMMARY.md  CLAUDE.md  CLEAN_MIGRATION_SUMMARY.md  CONSOLIDATION_SUMMARY.md  EMBEDDING_TYPE_MIGRATION_SUMMARY.md  FINAL_TYPE_MIGRATION_SUMMARY.md  HADES_MCP_TESTING.md  ISNE_TYPE_MIGRATION_SUMMARY.md  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  MODEL_ENGINE_TYPE_MIGRATION_SUMMARY.md  Makefile  OAUTH_SECURITY.md  ORCHESTRATION_TYPE_MIGRATION_SUMMARY.md  README.md  STATUS.md  TODO.md  TOOLS_TO_UTILS_MIGRATION.md  TYPE_CONSOLIDATION_SUMMARY.md  TYPE_FIXES_SUMMARY.md  TYPE_SYSTEM_CONSOLIDATION_COMPLETE.md  UTILS_TYPE_MIGRATION_SUMMARY.md  VALIDATION_TYPE_MIGRATION_SUMMARY.md  adapter_coverage_report.txt  analyze_adapter_coverage.py  bootstrap_graph_builder_migration_summary.md  code_rag_paper.md  comprehensive_sampler_test.py  comprehensive_test_suite.py  current_errors.txt  (+50 more)
.hades/: metadata.json
Docs/: PRD_PathRAG_Integration.md  PRD_Sockets_and_Proxy_Perf.md  Program_Plan.md  README.md  SCHEMA_Experiential_Memory.md  SoP_Program_Quickstart.md  code_triage.md  core_treesitter_survey.json
Docs/models/: qwen3-30b-a3b-thinking.md
Docs/pulse_articles/: GraphTraversalConceptWithExpandingFanout.md  IDEA_SQLIndex.md  ReadAmplificationInMulti‑stagePipelines.md  SocketPatterns.md
alerts/: alerts.json
auth/: auth.db
benchmark/alerts/: benchmark_alert_manager.py
benchmark/pipeline/: benchmark_pipeline_alerts.py
config/: README.md  pathrag_config.yaml
config/.hades/: metadata.json
config/isne/: isne_bootstrap_config.yaml
config/jina_v4/: config.yaml
core/: README.md  __init__.py
docs/: DATABASE_IMPLEMENTATIONS.md  EMBEDDING_IMPLEMENTATIONS.md  FUTURE_DEVELOPMENT_PATHS.md  HADES_SERVICE_ARCHITECTURE.md  INNOVATION_INTEGRATION.md  MCP_SERVER_IDEAS.md  MIGRATION_FROM_ORIGINAL.md  ORGANIC_EVOLUTION_STRATEGY.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_2_ARCHITECTURE_PLAN.md  PHASE_5_RESEARCH_PLAN.md  README.md  TEST_COVERAGE_BASELINE.md  enhanced_e2e_test_guide.md  hybrid_pipeline_implementation_plan.md  ingestion_system.md  isne_paper_extracted.txt  streaming_pipeline_architecture.md  xnx_notation_proof_version4.md
infer/: interface.py
infra/: README.md
ingest/: interface.py  pipeline.py
mcp_server/: server.py
models/: graph_data.pt  interface.py  node_id_map.json
pipeline/: init.py  registry.py
processors/: PHASE_STATUS.md
retrieve/: interface.py
scripts/: README.md  add_arxiv_papers.py  add_epoch_monitoring.py  add_todays_papers.py  analyze_adapter_coverage.py  analyze_full_dataset.py  analyze_graph_connectivity.py  bootstrap_full_dataset.py  bootstrap_jinav4.py  build_graph_edges.py  check_alerts.py  check_syntax.py  check_training_status.py  checkpointed_pipeline.py  clear_hades_db.py  comprehensive_quick_wins_test.py  configurable_isne_bootstrap_pipeline.py  daily_incremental_training.py  dataset_critique_and_plan.md  demo_bootstrap_pipeline.py  demo_process_ethnography.py  export_graph_for_training.py  fix_adapter_liskov_violations.py  fix_adapter_typing.py  fix_all_return_types.py  fix_chunker_typeddict_issues.py  fix_code_chunker_remaining_issues.py  fix_code_chunker_typing.py  fix_docproc_type_issues.py  fix_final_chunker_issues.py  fix_liskov_with_ignores.py  fix_logger_refs.py  fix_model_engine_typing.py  fix_parenthesis.py  fix_python_chunker_adapter_usage.py  fix_python_chunker_imports.py  fix_python_code_adapter.py  fix_remaining_adapter_issues.py  fix_remaining_type_issues.py  fix_remaining_types.py  (+46 more)
src/: DIRECTORY_CONTEXT.md  PROCESS_DYNAMICS.md  README.md  __init__.py
storage/: interface.py
temp-utils/: dump_tool_schema.py  final_coverage_tests.py  fix_docproc_types.py  identify_mcp_servers.py  simple_sampler_test.py  test_advanced_schema_cleanup.py  test_schema_cleanup.py  test_specific_fixes.py
test/: README.md  pytest.ini  test_adapter_types.py  test_adapter_types_direct.py  test_docproc_components.py  test_docproc_realfiles.py  test_haystack_engine.py  test_model_engine_types.py  test_vllm_config.py  test_vllm_config_type.py
test-data/: HADES_SERVICE_ARCHITECTURE.md  config.yaml  processor.py
test-out/: docproc_realfile_results.json  docproc_realfile_results_20250611_180741.json  docproc_test_results.json  haystack_monitoring_test_20250611_191433.json
tests/: README.md
(+1026 files in other folders)
