[tool.poetry]
name = "HADES"
version = "0.1.0"
description = "HADES: Unified RAG system with Jina v4 multimodal embeddings - Now with comprehensive type system"
authors = ["HADES Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies
torch = "^2.5.0"
transformers = "^4.52.0"
sentence-transformers = "^2.2.2"
peft = "^0.15.2"
torchvision = "^0.20.0"
# Storage
networkx = "^3.0"
pymongo = "^4.5.0"
python-arango = "^7.6.0"
# API
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
httpx = "^0.25.0"
# Utils
numpy = "^1.24.0"
tqdm = "^4.66.0"
pyyaml = "^6.0"
pathspec = "^0.11.0"
# Document processing
pypdf2 = "^3.0.0"
python-docx = "^1.0.0"
pillow = "^10.0.0"
# Embeddings
openai = "^1.0.0"
# Monitoring
prometheus-client = "^0.18.0"
psutil = "^5.9.0"
# Graph ML
torch-geometric = "^2.4.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
# Type checking
mypy = "^1.7.0"
types-networkx = "^3.0.0"
types-tqdm = "^4.65.0"
types-PyYAML = "^6.0.0"
types-requests = "^2.31.0"
types-setuptools = "^68.0.0"
# Additional type stubs
types-Pillow = "^10.0.0"
types-psutil = "^5.9.0"
# Code quality
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
mypy-extensions = "^1.1.0"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = false
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "arango",
    "arango.*",
    "vllm",
    "vllm.*",
    "mcp",
    "mcp.*",
    "src.config.*",
    "src.core.*",
    "pathspec"
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false